--- a/start.html
+++ b/start.html
@@ -10,6 +10,24 @@
   img {
    width: 100%;
   }
+  img:nth-child(1){
+    animation: opa 6s infinite linear;
+  }
+  img:nth-child(2){
+    animation: opa 6s infinite linear;
+    animation-delay: 3s;
+  }
+  @keyframes opa {
+    0% {
+        height: 0;
+    }
+    /* 50%{
+        height: 100%;
+    } */
+    /* 100%{
+        height: 0;
+    } */
+  }
  </style>
 </head>
 
